# 0.00.04 (35522) Oct 5, 2009
10/5/09 demo improvements to Laguerre root-finding
# 0.00.03 (35339) Sep 29, 2009
9/29/09 JO's changes to root-finding algorithms
# 0.00.02 (34724) Sep 2, 2009
9/2/09 Kmax=1000, requested by Kathy to see how model behaves
# 0.00.01 (34495) Aug 26, 2009
8/26/09 first pass at model prototype (mainclass=TitrationPrototype) with user-interface controls